2008-07-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/open.c: Include <stdio.h>.
	(__open_2): New function.
	(__open64_2): New alias to __open_2.
	* sysdeps/mach/hurd/openat.c: Include <stdio.h>.
	(__openat_2): New function.
	(__openat64_2): New alias to __openat_2.

2008-07-06  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6723]
	* time/mktime.c (__mktime_internal): Normalize tp->tm_isdst value.

2008-07-01  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: Define MSG_NOSIGNAL.
	* hurd/hurd/fd.h (__hurd_sockfail): Add extern inline function.
	* sysdeps/mach/hurd/recv.c (__recv): Use __hurd_sockfail instead of
	__hurd_dfail.
	* sysdeps/mach/hurd/recvfrom.c (__recvfrom): Likewise.
	* sysdeps/mach/hurd/recvmsg.c (__recvmsg): Likewise.
	* sysdeps/mach/hurd/send.c (__send): Likewise.
	* sysdeps/mach/hurd/sendto.c (__sendfrom): Likewise.
	* sysdeps/mach/hurd/sendmsg.c (__sendmsg): Likewise.

2008-03-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/recv.c (__recv): Initialize NPORTS.
	* sysdeps/mach/hurd/recvfrom.c (__recvfrom): Likewise.
	* sysdeps/mach/hurd/recvmsg.c (__recvmsg): Likewise.
	* hurd/fd-read.c (_hurd_fd_read): Initialize NREAD.
	* hurd/get-host.c (_hurd_get_host_config): Likewise.
	* sysdeps/mach/hurd/dl-sysdep.c (__libc_read): Likewise.

2008-06-27  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6657]
	* time/strptime_l.c: Don't clear s.era_cnt after successful match
	of %EY.
	Patch by Petr Baudis.

2008-06-26  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_debug.c (__p_type_syms): Add ns_t_dname entry.
	Patch by Peter Jones <pjones@redhat.com>.

2008-06-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6654]
	* stdlib/canonicalize.c (__realpath): readlink can write too much
	into the buffer on platforms without PATH_MAX.

2008-06-17  Carlos O'Donell  <carlos@codesourcery.com>

	[BZ #6653]
	* posix/tst-regex.c (main): Rename to...