@@ -5961,7 +5961,7 @@ CHARMAP
 <U1DB7>     /xe1/xb6/xb7 MODIFIER LETTER SMALL UPSILON
 <U1DB8>     /xe1/xb6/xb8 MODIFIER LETTER SMALL CAPITAL U
 <U1DB9>     /xe1/xb6/xb9 MODIFIER LETTER SMALL V WITH HOOK
-<U1DBA>     /xe1/xb6/xbe MODIFIER LETTER SMALL TURNED V
+<U1DBA>     /xe1/xb6/xba MODIFIER LETTER SMALL TURNED V
 <U1DBB>     /xe1/xb6/xbb MODIFIER LETTER SMALL Z
 <U1DBC>     /xe1/xb6/xbc MODIFIER LETTER SMALL Z WITH RETROFLEX HOOK
 <U1DBD>     /xe1/xb6/xbd MODIFIER LETTER SMALL Z WITH CURL
