@@ -1,0 +1,2 @@
+Output #2 <stdout>.
+Output #1 <stderr>.
